--- a/callout.html
+++ b/callout.html
@@ -8,18 +8,18 @@
 	<!--[if lt IE 8]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a>. <br/>
 	Not all the features of this widget will work with IE7 and below.</p><![endif]-->
 	
-		<div id="canvasContainer">
-			<div class="peopleContainer"></div>
-			<div class="locContainer">&laquo; Select a connection from the list.</div>
+		<div id="calloutContainer">
+			<div id="searchContainer">
+				<input type="text" id="txtSearch" /> 
+				<input type="button" id="btnSearch" value="Go" />
+			</div>
+			<div class="locContainer">
+				Enter a location. 
+			</div>
 		</div>
 		
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>')</script>
-		
-		<!-- Definition to retrieve external content via Data Pipelining. -->
-		<script type="text/os-data" xmlns:osd="http://ns.opensocial.org/2008/markup">
-		    <osd:HttpRequest key="locationPool" href="js/locations.json"/>
-		</script>
 		
 		<script src="js/libs/plugins.js" type="text/javascript"></script>
 		<script src="js/script.js" type="text/javascript"></script>
@@ -30,7 +30,7 @@
 
 				<div class="locTitle">
 					<div class="locCity">{{city}}</div>
-					<div class="locShare" id="{{id}}">Share</div>
+					<div class="locShare" id="{{id}}">insert</div>
 					<div style="clear:both;"></div>
 				</div>
 			
@@ -47,10 +47,6 @@
 						{{weather.conditions}}<br />
 						<span class="locTemperature">{{weather.tempDescription}}</span>	
 					</div>
-					<div class="locWeatherMore">
-						Humidity: {{weather.humidity}} <br/>
-						Wind: {{weather.windDescription}}
-					</div>
                     <div class="wundergroundAttr">
 	                	<a href="{{weather.url}}" target="_blank">
 	                    	<img src="http://icons.wxug.com/logos/PNG/wundergroundLogo_blue.png" alt="Weather Underground" />	                    
@@ -58,26 +54,9 @@
                     </div>
 					<div style="clear:both"></div>
 				</div>		
-				<div style="clear:both"></div>
-
-				<iframe style="border: 1px solid #425C68;" width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q={{latitude}},{{longitude}}&output=embed&z=14"></iframe>
 			</div>
 			{{/locations}}
 		</script>
 		
-		<script id="peopleListTemplate" type="text/x-mustache-template">
-			{{#data}}
-			<div class="person">
-				<div class="personAvatar">
-					<img src="{{avatarURL}}" />
-				</div>
-				<div class="personName">
-					<span class="firstName">{{firstName}}</span><span class="lastName">{{lastName}}</span><br />
-					<span class="locale">{{profile.locale}}</span>
-				</div>
-				<div style="clear:both"></div>
-			</div>
-			{{/data}}
-		</script>
 	</body>
 </html>
