--- a/callout.html
+++ b/callout.html
@@ -7,6 +7,21 @@
 	<body>
 	<!--[if lt IE 8]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a>. <br/>
 	Not all the features of this widget will work with IE7 and below.</p><![endif]-->
+	<object id="myExperience" class="BrightcoveExperience">
+      <param name="bgcolor" value="#FFFFFF" />
+      <param name="width" value="480" />
+      <param name="height" value="270" />
+      <param name="playerID" value="2031045745001" />
+      <param name="playerKey" value="AQ~~%2CAAAB2OQbIXk~%2CEjsI0sjUlMbxzehJ_b8jEVPgu7BQ9IxC" />
+      <param name="isVid" value="true" />
+      <param name="isUI" value="true" />
+      <param name="dynamicStreaming" value="true" />
+      <!-- params for Universal Player API -->
+      <param name="includeAPI" value="true" />
+      <param name="templateReadyHandler" value="BCL.onTemplateReady" />
+    </object>
+    <script type="text/javascript">brightcove.createExperiences();</script>
+    <!-- End of Brightcove Player -->
 	<fieldset>
       <legend>Videos</legend>
          <div id="results"></div>
@@ -60,7 +75,7 @@
 		<script src="js/script.js" type="text/javascript"></script>
 		<script type="text/javascript" src="http://files.brightcove.com/bc-mapi.js"></script>
 		<script language="JavaScript" type="text/javascript" src="http://admin.brightcove.com/js/BrightcoveExperiences.js"></script>
-		
+
 		<script id="locationTemplate" type="text/x-mustache-template">
 			{{#locations}}
 			<div class="location">
