--- a/home.html
+++ b/home.html
@@ -3,80 +3,64 @@
     <head>
         <meta charset="UTF-8">
         <link href="css/style.css" type="text/css" rel="stylesheet" />
+            <script type="text/javascript" src="http://files.brightcove.com/bc-mapi.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a>. <br/>
         Not all the features of this widget will work with IE7 and below.</p><![endif]-->
+<!-- Start of Brightcove Player -->
+    <script language="JavaScript" type="text/javascript" src="http://admin.brightcove.com/js/BrightcoveExperiences.js"></script>
+    <object id="myExperience" class="BrightcoveExperience">
+      <param name="bgcolor" value="#FFFFFF" />
+      <param name="width" value="480" />
+      <param name="height" value="270" />
+      <param name="playerID" value="2031045745001" />
+      <param name="playerKey" value="AQ~~%2CAAAB2OQbIXk~%2CEjsI0sjUlMbxzehJ_b8jEVPgu7BQ9IxC" />
+      <param name="isVid" value="true" />
+      <param name="isUI" value="true" />
+      <param name="dynamicStreaming" value="true" />
+      <!-- params for Universal Player API -->
+      <param name="includeAPI" value="true" />
+      <param name="templateReadyHandler" value="BCL.onTemplateReady" />
+    </object>
+    <script type="text/javascript">brightcove.createExperiences();</script>
+    <!-- End of Brightcove Player -->
+    <fieldset>
+      <legend>Videos</legend>
+         <div id="results"></div>
+    </fieldset><br>
+    <!-- This is the script to modify for the exercise -->
+    <script type="text/javascript">
+      // BCL Media API search maker -- adapted from JS-MAPI on opensource.brightcove.com
+      // namespace to keep all the "global" vars together
+      var BCL = {};
+      // placeholder - params for API call
+      BCL.params = {};
+      // Media API read token
+      BCMAPI.token = "zgooH18dKNI0NR4PiDk6_iabWI372AA96LUU_aKVKH06ZLz1bMZtow..";
+      // set the callback for Media API calls
+      BCMAPI.callback = "BCL.onSearchResponse";
+      // set the filter
+      BCMAPI.search(BCL.params);
+      BCL.onSearchResponse = function(jsonData) {
+        var str = "";
+        for (var index in jsonData.items) {
+          str += "<a onclick=\"BCL.playVideo(" + jsonData.items[index].id + ")\" style=\"cursor:pointer\"><img src=\"" + jsonData.items[index].thumbnailURL + "\"/><br/><small>" + jsonData.items[index].name + "</<small></a><hr/>";
+        }
+        document.getElementById("results").innerHTML = str;
+      }
+      // Player API scripting
+      // event listener for the player being ready
+      BCL.onTemplateReady = function (event) {
+        BCL.player = brightcove.api.getExperience("myExperience");
+        // get a reference to the video player
+        BCL.videoPlayer = BCL.player.getModule(brightcove.api.modules.APIModules.VIDEO_PLAYER);
+      }
+      // play video function
+      BCL.playVideo = function(videoID) {
+        BCL.videoPlayer.loadVideoByID(videoID);
+      }
+    </script>
 
-        <div id="homeContainer">
-            <div id="scrollableArea" class="box">
-                <div class="column">
-                    <div class="peopleContainer"></div>                    
-                </div>
-                <div class="column">
-                    <div class="locContainer"></div>
-                </div>
-            </div>
-        </div>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>')</script>
-        
-        <!-- Definition to retrieve external content via Data Pipelining. -->
-		<script type="text/os-data" xmlns:osd="http://ns.opensocial.org/2008/markup">
-		    <osd:HttpRequest key="locationPool" href="js/locations.json"/>
-		</script>
-		
-        <script src="js/libs/plugins.js" type="text/javascript"></script>
-        <script src="js/script.js" type="text/javascript"></script>
-
-        <script id="locationTemplate" type="text/x-mustache-template">
-            <div id="back">&laquo; Back to People</div>
-            {{#locations}}
-            <div class="location">
-                <div class="locCity">{{city}}</div>
-                <div class="locShare" id="{{id}}">Share</div>
-                <div style="clear:both;"></div>
-
-
-                <div class="time">
-                    <div class="locDate" id="locDate_{{id}}">{{timeZone.displayDate}}</div>
-                    <div class="locTime" id="locTime_{{id}}">{{timeZone.displayTime}}</div>
-                </div>
-
-                <div class="weather">
-                    <div class="locWeatherIcon">
-                        <img src="{{weather.iconURL}}" />
-                    </div>
-                    <div class="locWeatherConditions">
-                        {{weather.conditions}}<br />
-                        <span class="locTemperature">{{weather.tempDescription}}</span><br />
-                    </div>
-                    <div class="wundergroundAttr">
-	                	<a href="{{weather.url}}" target="_blank">
-	                    	<img src="http://icons.wxug.com/logos/PNG/wundergroundLogo_blue.png" alt="Weather Underground" />	                    
-	                	</a>
-                    </div>
-                    <div style="clear:both"></div>
-                </div>		
-            </div>
-            {{/locations}}
-        </script>
-
-        <script id="peopleListTemplate" type="text/x-mustache-template">
-            <div id="viewAll">View First 5 &raquo;</div>
-            {{#data}}
-            <div class="person">
-                <div class="personAvatar">
-                    <img src="{{avatarURL}}" />
-                </div>
-                <div class="personName">
-                    <span class="firstName">{{firstName}}</span><span class="lastName">{{lastName}}</span><br />
-                    <span class="locale">{{profile.locale}}</span>
-                </div>
-                <div style="clear:both"></div>
-            </div>
-            {{/data}}
-        </script>
     </body>
 </html>
