--- a/canvas.html
+++ b/canvas.html
@@ -14,7 +14,7 @@ function getTopVideos() {
 
 }
 
-$(document).jQuery(document).ready(function() {
+$(document).ready(function() {
   // Stuff to do as soon as the DOM is ready;
   $("#resp").html("TEST");
 });
