--- a/canvas.html
+++ b/canvas.html
@@ -19,7 +19,7 @@ $(document).ready(function() {
   $.get('http://api.brightcove.com/services/library?command=find_all_videos&token=0Z2dtxTdJAxtbZ-d0U7Bhio2V1Rhr5Iafl5FFtDPY8E.', function(data) {
   $('#resp').html(data);
  
-});
+}, "json");
 });
 
 </script>
