--- a/canvas.html
+++ b/canvas.html
@@ -18,7 +18,7 @@ $(document).ready(function() {
   // Stuff to do as soon as the DOM is ready;
   url = "http://api.brightcove.com/services/library?command=find_all_videos&token=0Z2dtxTdJAxtbZ-d0U7Bhio2V1Rhr5Iafl5FFtDPY8E.&callback=?";
   $.get(url, function(data) {
-  $('#resp').html(data);
+  $('#resp').html("TEST");
  
 }, "json");
 });
