--- a/canvas.html
+++ b/canvas.html
@@ -17,11 +17,12 @@ function getTopVideos() {
 $(document).ready(function() {
   // Stuff to do as soon as the DOM is ready;
   url = "http://api.brightcove.com/services/library?command=find_all_videos&token=0Z2dtxTdJAxtbZ-d0U7Bhio2V1Rhr5Iafl5FFtDPY8E.&callback=?";
-  $.get(url, function(data) {
-  $('#resp').html("TEST");
- 
-}, "json");
-});
+ osapi.http.get({
+      href: url,
+        format: 'json'
+    }).execute(function(response) {
+        $("#resp").html(response.content);
+    });
 
 </script>
     <body>
