--- a/canvas.html
+++ b/canvas.html
@@ -16,7 +16,7 @@ $(document).ready(function() {
       href: url,
         format: 'json'
     }).execute(function(response) {
-        $("#resp").html(response.content);
+        $("#resp").html(response);
     });
 });
 </script>
