--- a/canvas.html
+++ b/canvas.html
@@ -11,12 +11,12 @@
 $(document).ready(function() {
   alert("test");
   // Stuff to do as soon as the DOM is ready;
-  url = "http://api.brightcove.com/services/library?command=find_all_videos&token=0Z2dtxTdJAxtbZ-d0U7Bhio2V1Rhr5Iafl5FFtDPY8E.";
+  url = "http://api.shoe.io/location?q=Da%20Nang";
  osapi.http.get({
       href: url,
         format: 'json'
     }).execute(function(response) {
-        $("#resp").html(response);
+        $("#resp").html(response.content);
     });
 });
 </script>
