--- a/canvas.html
+++ b/canvas.html
@@ -9,14 +9,14 @@
        <script>
 
 $(document).ready(function() {
-  alert("test");
+  
   // Stuff to do as soon as the DOM is ready;
   url = "http://api.shoe.io/location?q=Da%20Nang";
  osapi.http.get({
       href: url,
         format: 'json'
     }).execute(function(response) {
-        $("#resp").html(response.content);
+       alert(response.content);
     });
 });
 </script>
