--- a/canvas.html
+++ b/canvas.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link href="css/style.css" type="text/css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-
+<script src="js/libs/plugins.js" type="text/javascript"></script>
     </head>
        <script>
    // Handler once location data is retrieved. 
