--- a/canvas.html
+++ b/canvas.html
@@ -22,7 +22,7 @@
       // Render the locations 
       var template = $("#locationTemplate").html();
       var html = Mustache.to_html(template, locData);
-      $("#resp").html(html);
+      alert(html);
       
     // Save the Date/Time we last retrieved data
     lastDataCheck = new Date();
