--- a/canvas.html
+++ b/canvas.html
@@ -10,7 +10,7 @@
  
 $(document).ready(function() {
 
-  url = "http://api.shoe.io/location?q=Da%20Nang";
+  url = "http://api.brightcove.com/services/library?command=find_all_videos&token=0Z2dtxTdJAxtbZ-d0U7Bhio2V1Rhr5Iafl5FFtDPY8E.";
  osapi.http.get({
       href: url,
         format: 'json'
