--- a/canvas.html
+++ b/canvas.html
@@ -15,7 +15,7 @@ $(document).ready(function() {
       href: url,
         format: 'json'
     }).execute(function(response) {
-      console.log(response.content.data);
+      console.log(response.content.items);
     });
 });
 </script>
