--- a/canvas.html
+++ b/canvas.html
@@ -27,6 +27,7 @@ $(document).ready(function() {
   
       // Render the locations 
       var template = $("#brightcoveTemplate").html();
+      console.log(brightcoveItems);
       var html = Mustache.to_html(template, brightcoveItems);
       console.log(html);
     }
