--- a/canvas.html
+++ b/canvas.html
@@ -17,7 +17,7 @@
       var template = $("#brightcoveTemplate").html();
       console.log(brightcoveItems);
       var html = Mustache.to_html(template, brightcoveItems);
-     console.log(html);
+     console.log("HTML: " +html);
     }
 
 $(document).ready(function() {
