--- a/canvas.html
+++ b/canvas.html
@@ -15,7 +15,7 @@
   
       // Render the locations 
       var template = $("#brightcoveTemplate").html();
-      console.log(brightcoveItems);
+      console.log(template);
       var html = Mustache.to_html(template, brightcoveItems);
      console.log("HTML: " +html);
     }
