--- a/canvas.html
+++ b/canvas.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <link href="css/style.css" type="text/css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="js/libs/plugins.js" type="text/javascript"></script>
+    <script src="http://mustache.github.com/extras/mustache.js"></script>
+
     </head>
        <script>
  
