--- a/callout.html
+++ b/callout.html
@@ -91,7 +91,7 @@ osapi.jive.core.container.editor().insert("<table><tr><td><b>"+html+"!</b></td><
 <ul>
 {{#items}}
 
-    <li><img class="videoid" id="{{id}}" src="{{thumbnailURL}}" /><strong>{{name}}</strong></li>
+    <li><img class="videoid" id="{{id}}" src="{{thumbnailURL}}" /></li>
 
 
 {{/items}}
