--- a/callout.html
+++ b/callout.html
@@ -51,7 +51,23 @@ $(document).ready(function() {
                         }
                     }
                 };
-osapi.jive.core.container.editor().insert("<table><tr><td><b>"+html+"!</b></td></tr></table>");
+osapi.jive.core.container.editor().insert(' <!-- Start of Brightcove Player -->
+    <script language="JavaScript" type="text/javascript" src="http://admin.brightcove.com/js/BrightcoveExperiences.js"></script>
+    <object id="myExperience" class="BrightcoveExperience">
+      <param name="bgcolor" value="#FFFFFF" />
+      <param name="width" value="480" />
+      <param name="height" value="270" />
+      <param name="playerID" value="'+id+'" />
+      <param name="playerKey" value="AQ~~%2CAAAB2OQbIXk~%2CEjsI0sjUlMbxzehJ_b8jEVPgu7BQ9IxC" />
+      <param name="isVid" value="true" />
+      <param name="isUI" value="true" />
+      <param name="dynamicStreaming" value="true" />
+      <!-- params for Universal Player API -->
+      <param name="includeAPI" value="true" />
+      <param name="templateReadyHandler" value="BCL.onTemplateReady" />
+    </object>
+    <script type="text/javascript">brightcove.createExperiences();</script>
+    <!-- End of Brightcove Player -->');
                 // Post the activity to the activity stream
                 osapi.activities.create(params).execute(
                     function(response) {
@@ -68,7 +84,7 @@ osapi.jive.core.container.editor().insert("<table><tr><td><b>"+html+"!</b></td><
 	
             });
 
-  url = "http://api.brightcove.com/services/library?command=find_all_videos&token=0Z2dtxTdJAxtbZ-d0U7Bhio2V1Rhr5Iafl5FFtDPY8E.";
+  url = "http://api.brightcove.com/services/library?command=find_all_videos&token=zgooH18dKNI0NR4PiDk6_iabWI372AA96LUU_aKVKH06ZLz1bMZtow..";
  osapi.http.get({
       href: url,
         format: 'json'
