--- a/callout.html
+++ b/callout.html
@@ -51,7 +51,7 @@ $(document).ready(function() {
                         }
                     }
                 };
-osapi.jive.core.container.editor().insert('  <script language="JavaScript" type="text/javascript" src="http://admin.brightcove.com/js/BrightcoveExperiences.js"></script>
+                var embed =  '  <script language="JavaScript" type="text/javascript" src="http://admin.brightcove.com/js/BrightcoveExperiences.js"></script>
     <object id="myExperience" class="BrightcoveExperience">
       <param name="bgcolor" value="#FFFFFF" />
       <param name="width" value="480" />
@@ -66,7 +66,8 @@ osapi.jive.core.container.editor().insert('  <script language="JavaScript" type=
       <param name="templateReadyHandler" value="BCL.onTemplateReady" />
     </object>
     <script type="text/javascript">brightcove.createExperiences();</script>
-  ');
+  ';
+osapi.jive.core.container.editor().insert(embed);
                 // Post the activity to the activity stream
                 osapi.activities.create(params).execute(
                     function(response) {
