--- a/canvas.html
+++ b/canvas.html
@@ -24,9 +24,7 @@
 $(document).ready(function() {
 var prefs = new gadgets.Prefs();
         var readApi = prefs.getString("readApi");
-        alert(readApi);
-
-  url = "http://api.brightcove.com/services/library?command=find_all_videos&token=0Z2dtxTdJAxtbZ-d0U7Bhio2V1Rhr5Iafl5FFtDPY8E.";
+  url = "http://api.brightcove.com/services/library?command=find_all_videos&token="+readApi;
  osapi.http.get({
       href: url,
         format: 'json'
