--- a/canvas.html
+++ b/canvas.html
@@ -42,7 +42,7 @@ var prefs = new gadgets.Prefs();
 <ul>
 {{#items}}
 
-    <li><img src="{{thumbnailURL}}" /><strong>{{name}}</strong></li>
+    <li><img class="thumbnail" src="{{thumbnailURL}}" /><div class="info"><span class="videoname">{{name}}</span></div></li>
 
 
 {{/items}}
