--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     <!-- End of Brightcove Player -->
     <fieldset>
       <legend>Videos</legend>
-         <div id="results"></div>
+         <div id="results" style="width:800px;height:600px"></div>
     </fieldset><br>
     <!-- This is the script to modify for the exercise -->
     <script type="text/javascript">
