--- a/callout.html
+++ b/callout.html
@@ -83,7 +83,7 @@ osapi.jive.core.container.editor().insert('<img class="jive_macro jive_macro_you
 });
 </script>
 
-		<div id="calloutContainer">
+		<div id="calloutContainer" style="width:800px;height: 600px;">
 
 		</div>
 
