--- a/insert.html
+++ b/insert.html
@@ -44,6 +44,7 @@
     </div>
     <div class="tab-content">
     <div id="allvideotab" class="tab-pane active" style="width:560px;height: 372px;background: #424242">
+      <div id="videos">
       <table>
         <tr>
           <th class="video-name active">NAME</th>
@@ -91,6 +92,7 @@
         </tr>
 
       </table>
+    </div>
          <div class="button-group">
     	<span class="button insert-video disable"><span>Insert Video</span><span></span></span>
     	<span class="button insert-cancel"><span>Cancel</span><span></span></span>
