--- a/insert.html
+++ b/insert.html
@@ -46,14 +46,14 @@
     <div id="allvideotab" class="tab-pane active" style="width:560px;height: 372px;background: #424242">
       <div id="videos">
       <table>
-        <tr id="123456">
+        <tr>
           <th class="video-name active">NAME</th>
           <th class="video-date">DATE</th>
           <th class="video-owner">OWNER</th>
           <th class="video-star"><span class="head-star"></span></th>
         </tr>
 
-        <tr class="video-item">
+        <tr class="video-item"  id="123456">
           <td>
             <div class="col1" style="width: 327px;">
               <div class="video-thumbnail" style="width:96px;height:63px;float:left;display:inline;backrgound: blue;position:relative;">
