--- a/insert.html
+++ b/insert.html
@@ -114,8 +114,9 @@
     <param name="seamlesstabbing" value="false" />
     <param name="allowFullScreen" value="true" />
     <param name="swLiveConnect" value="true" />
+    <param name="videoPlayer" value="2180516443001" />
     <param name="allowScriptAccess" value="always" />
-    <embed src="http://c.brightcove.com/services/viewer/federated_f9?isVid=1" bgcolor="#FFFFFF" flashVars="playerID=2031045745001&playerKey=AQ~~,AAAB2OQbIXk~,EjsI0sjUlMbxzehJ_b8jEVPgu7BQ9IxC&domain=embed&dynamicStreaming=true" base="http://admin.brightcove.com" name="flashObj" width="486" height="412" seamlesstabbing="false" type="application/x-shockwave-flash" allowFullScreen="true" swLiveConnect="true" allowScriptAccess="always" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
+    <embed src="http://c.brightcove.com/services/viewer/federated_f9?isVid=1" bgcolor="#FFFFFF" flashVars="videoPlayer=2180516443001&playerID=2031045745001&playerKey=AQ~~,AAAB2OQbIXk~,EjsI0sjUlMbxzehJ_b8jEVPgu7BQ9IxC&domain=embed&dynamicStreaming=true" base="http://admin.brightcove.com" name="flashObj" width="486" height="412" seamlesstabbing="false" type="application/x-shockwave-flash" allowFullScreen="true" swLiveConnect="true" allowScriptAccess="always" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
     </object>
     </script>
 <script type="text/javascript"> Cufon.now(); </script>
