--- a/insert.html
+++ b/insert.html
@@ -105,7 +105,7 @@
  </div>
   </div>
     <script id="videoTemplate" type="text/x-mustache-template">
-   <object id="flashObj" width="486" height="412" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,47,0">
+   <object id="flashObj" width="486" height="412">
    <param name="movie" value="http://c.brightcove.com/services/viewer/federated_f9?isVid=1" />
    <param name="bgcolor" value="#FFFFFF" />
    <param name="flashVars" value="@videoPlayer={{id}}&playerID=2031045745001&playerKey=AQ~~,AAAB2OQbIXk~,EjsI0sjUlMbxzehJ_b8jEVPgu7BQ9IxC&domain=embed&dynamicStreaming=true" />
@@ -121,3 +121,4 @@
 <script type="text/javascript"> Cufon.now(); </script>
 </body>
 </html>
+
