--- a/player.html
+++ b/player.html
@@ -19,17 +19,7 @@
 
   </style>
   <div id="container" style="width:560px;height:560px;padding: 25px; margin:0 auto;">
-  	 <object id="flashObj" width="486" height="412">
-   <param name="movie" value="http://c.brightcove.com/services/viewer/federated_f9?isVid=1" />
-   <param name="bgcolor" value="#FFFFFF" />
-   <param name="flashVars" value="@videoPlayer=2180516443001&playerID=2031045745001&playerKey=AQ~~,AAAB2OQbIXk~,EjsI0sjUlMbxzehJ_b8jEVPgu7BQ9IxC&domain=embed&dynamicStreaming=true" />
-   <param name="base" value="http://admin.brightcove.com" />
-   <param name="seamlesstabbing" value="false" />
-   <param name="allowFullScreen" value="true" />
-   <param name="swLiveConnect" value="true" />
-   <param name="allowScriptAccess" value="always" />
-   <embed src="http://c.brightcove.com/services/viewer/federated_f9?isVid=1" bgcolor="#FFFFFF" flashVars="@videoPlayer=2180516443001&playerID=2031045745001&playerKey=AQ~~,AAAB2OQbIXk~,EjsI0sjUlMbxzehJ_b8jEVPgu7BQ9IxC&domain=embed&dynamicStreaming=true" base="http://admin.brightcove.com" name="flashObj" width="486" height="412" seamlesstabbing="false" type="application/x-shockwave-flash" allowFullScreen="true" swLiveConnect="true" allowScriptAccess="always" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash">
-   </embed>
+  	<object id="flashObj" width="480" height="270" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,47,0"><param name="movie" value="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" /><param name="bgcolor" value="#FFFFFF" /><param name="flashVars" value="videoId=2180516443001&playerID=2031045747001&playerKey=AQ~~,AAAB2OQbIXk~,EjsI0sjUlMa1y5-7i1W7RBMi0P8NlRGZ&domain=embed&dynamicStreaming=true" /><param name="base" value="http://admin.brightcove.com" /><param name="seamlesstabbing" value="false" /><param name="allowFullScreen" value="true" /><param name="swLiveConnect" value="true" /><param name="allowScriptAccess" value="always" /><embed src="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" bgcolor="#FFFFFF" flashVars="videoId=2180516443001&playerID=2031045747001&playerKey=AQ~~,AAAB2OQbIXk~,EjsI0sjUlMa1y5-7i1W7RBMi0P8NlRGZ&domain=embed&dynamicStreaming=true" base="http://admin.brightcove.com" name="flashObj" width="480" height="270" seamlesstabbing="false" type="application/x-shockwave-flash" allowFullScreen="true" allowScriptAccess="always" swLiveConnect="true" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></embed></object>
      </div>
 </body>
 </html>
