--- a/player.html
+++ b/player.html
@@ -19,7 +19,18 @@
 
   </style>
   <div id="container" style="width:560px;height:560px;padding: 25px; margin:0 auto;">
-  	<object id="flashObj" width="480" height="270" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,47,0"><param name="movie" value="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" /><param name="bgcolor" value="#FFFFFF" /><param name="flashVars" value="videoId=2180516443001&playerID=2031045747001&playerKey=AQ~~,AAAB2OQbIXk~,EjsI0sjUlMa1y5-7i1W7RBMi0P8NlRGZ&domain=embed&dynamicStreaming=true" /><param name="base" value="http://admin.brightcove.com" /><param name="seamlesstabbing" value="false" /><param name="allowFullScreen" value="true" /><param name="swLiveConnect" value="true" /><param name="allowScriptAccess" value="always" /><embed src="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" bgcolor="#FFFFFF" flashVars="videoId=2180516443001&playerID=2031045747001&playerKey=AQ~~,AAAB2OQbIXk~,EjsI0sjUlMa1y5-7i1W7RBMi0P8NlRGZ&domain=embed&dynamicStreaming=true" base="http://admin.brightcove.com" name="flashObj" width="480" height="270" seamlesstabbing="false" type="application/x-shockwave-flash" allowFullScreen="true" allowScriptAccess="always" swLiveConnect="true" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></embed></object>
-     </div>
+  <script  language="JavaScript" type="text/javascript" src="
+http://admin.brightcove.com/js/BrightcoveExperiences.js"></script>
+<object type="application/x-shockwave-flash" data="http://c.brightcove.com/services/viewer/federated_f9?&amp;width=656&amp;height=369&amp;flashID=myExperience&amp;bgcolor=%23FFFFFF&amp;playerID=1964524200001&amp;playerKey=AQ~~%2CAAAAdgSbWlk~%2CNiXcnm49bNpcC7LNhBZT4sL3obcxems0&amp;isVid=true&amp;isUI=true&amp;dynamicStreaming=true&amp;autoStart=false&amp;wmode=transparent&amp;%40videoPlayer=628147805001&amp;videoSmoothing=true" id="myExperience" width="656" height="369" class="BrightcoveExperience" seamlesstabbing="undefined">
+  <param name="allowScriptAccess" value="always">
+  <param name="allowFullScreen" value="true">
+  <param name="seamlessTabbing" value="false">
+  <param name="swliveconnect" value="true">
+  <param name="wmode" value="transparent">
+  <param name="quality" value="high">
+  <param name="bgcolor" value="#FFFFFF">
+    </object>
+    <script type="text/javascript">brightcove.createExperiences();</script>
+  </div>
 </body>
 </html>
